--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,41 @@
-<p>progress works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h4 class="card-title">Striped Progress Bar {{ progreso1 }}</h4>
+
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-info progress-bar-striped active" [style.width]="getProgreso1" style="height:10px;" role="progressbar"></div>
+                </div>
+
+                <div class="progress m-t-20">
+                    <div class="progress-bar bg-danger progress-bar-striped active" [style.width]="getProgreso2" style="height:10px;" role="progressbar"></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-incrementador (valorOutput)="progreso1 = $event" [valorInput]="progreso1"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+
+                <app-incrementador (valorOutput)="progreso2 = $event" [valorInput]="progreso2" [btnClass]="'btn-info'"></app-incrementador>
+
+            </div>
+        </div>
+    </div>
+</div>
