--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,11 @@
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both
 }
+
+#themecolors .selector {
+    cursor: pointer;
+}
+
+.cursor {
+    cursor: pointer;
+}
