--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -26,7 +26,7 @@
                     </a>
                     <ul aria-expanded="false" class="collapse">
                         <li *ngFor="let subMenuItem of item.submenu">
-                            <a routerLink="{{ subMenuItem.url }}">{{ subMenuItem.titulo }} </a>
+                            <a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="{{ subMenuItem.url }}">{{ subMenuItem.titulo }} </a>
                         </li>
                     </ul>
                 </li>
